/*
 * $Id: ChangeLog,v 1.1757 2003/11/23 19:34:50 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-23 17:17 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/dbedit.prg
    * Code cleanup
    + Column data can be a codeblock instead of a string ;)
    ! Check for correct (NUMERIC) return type of UserFunc
    ! Column separator is now <space> + <line> + <space> by default
    ! When headers array is passed and one column is empty, use its column
      name (data) as the header
      NOTE: if column data is a codeblock, it'll have "<block>" as title
    + Column PICTURE support
    + Code to manage empty 'filtered' dbfs
    % Changed all ValType() to HB_IS*() typechecks

2003-11-23 20:35 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbrddcdx.h
  * xharbour/include/hbrdddbf.h
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! small fix in cl53 locking scheme. The random lock area is
      0x10001 not 0x10000
    * the external dbf function prototyped in hbrdddbf.h with extern "C"
      it should make MSVC happy and we don't have to add 'extern "C"' to
      source files. If I'm wrong then 'extern "C"' has to be restored in
      dbf1.c - I cannot check it with MSVC, sorry.
  * xharbour/bin/bld.bat
  * xharbour/config/dos/global.cf
  * xharbour/config/dos/watcom.cf
  * xharbour/include/hbfixdj.h
  * xharbour/source/compiler/gencobj.c
    ! fixed problem with double "=" in harbour.cfg file
    * changes by Lorenzo Fiorini for DOS Watcom and DJGPP compilation with
      my small modification

2003-11-23 15:45 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * doc/hash.txt
    + Added a section explaining hash partitioning
    + Added reference for HSetPartition and HGetPartition

  * doc/hbxml.txt